test_suite5/ALAN/test_suite/alan-2022-examples/failing/001510_mutation.alan
source GN2 begin call Xt(9, 5 elsif) end
